--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <header>
         <div class="container">
             <div id="branding">
-                <h1>John Doe - Aspiring Freelancer</h1>
+                <h1>Alexis - Aspiring Freelancer</h1>
             </div>
             <nav>
                 <ul>
@@ -82,7 +82,7 @@
     <div class="container">
         <div class="content" id="about">
             <h2>About Me</h2>
-            <p>Hello! I'm John Doe, an aspiring freelancer with a passion for web development and graphic design. With a background in computer science and a keen eye for aesthetics, I specialize in creating visually appealing and user-friendly websites. My goal is to help businesses and individuals establish a strong online presence and achieve their digital objectives.</p>
+            <p>Hello! I'm Alexis, an aspiring freelancer with a passion for web development and graphic design. With a background in computer science and a keen eye for aesthetics, I specialize in creating visually appealing and user-friendly websites. My goal is to help businesses and individuals establish a strong online presence and achieve their digital objectives.</p>
         </div>
         
         <div class="content" id="services">
@@ -98,13 +98,13 @@
         <div class="content" id="contact">
             <h2>Contact Me</h2>
             <p>If you're interested in working together or have any questions, feel free to reach out!</p>
-            <p>Email: johndoe@example.com</p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/johndoe" target="_blank">linkedin.com/in/johndoe</a></p>
+            <p>Email: Alexis@example.com</p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/Alexis" target="_blank">linkedin.com/in/Alexis</a></p>
         </div>
     </div>
 
     <footer>
-        <p>John Doe &copy; 2024</p>
+        <p>Alexis &copy; 2024</p>
     </footer>
 </body>
 </html>
