--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="container">
         <div class="header">
             <h1>Welcome to My Portfolio</h1>
-            <img src="2x2.jpg" alt="Profile Picture">
+            <img src="2x2 pic.jpg" alt="Profile Picture">
             <p>Hello! I'm <strong>[Your Name]</strong>, an aspiring SEO Specialist passionate about helping businesses improve their online presence and achieve higher search engine rankings.</p>
         </div>
         <div class="content">
