--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Introduction - Aspiring SEO Specialist</title>
+    <title>Introduction - Aspiring SEO Expert</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -51,7 +51,7 @@
         <div class="header">
             <h1>Welcome to My Portfolio</h1>
             <img src="2x2 pic.jpg" alt="Profile Picture">
-            <p>Hello! I'm <strong>[Your Name]</strong>, an aspiring SEO Specialist passionate about helping businesses improve their online presence and achieve higher search engine rankings.</p>
+            <p>Hello! I'm <strong>[Your Name]</strong>, an aspiring SEO Expert passionate about helping businesses improve their online presence and achieve higher search engine rankings.</p>
         </div>
         <div class="content">
             <div class="skills">
